[package]
name = "he_exporter"
version = "0.1.0"
authors = ["Sebastian YEPES <syepes@gmail.com>"]
description = "Hubitat Elevation Device Attribute Exporter"
edition = "2018"

[dependencies]
clippy = { version = "*" }
reqwest = { version = "0.11", features = ["blocking","json", "cookies", "multipart"] }
tokio = { version = "1.2.*", features = ["full"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", features = ["raw_value"] }
anyhow = "1.0.*"
tiny_http = "0.8.*"
convert_case = "0.4.*"
openssl = { version = "0.10.*", features = ["vendored"] }
clap-v3 = { git = "https://github.com/poma/clap/", default-features = false, features = ["std", "cargo"] }
url = "2"
log = "*"
env_logger = "*"
chrono = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1