[package]
name = "hubitat_exporter"
version = "0.1.6"
edition = "2021"
authors = ["Sebastian YEPES <syepes@gmail.com>"]
keywords = ["home-automation", "prometheus-exporter", "hubitat"]
license = "Apache-2.0"
description = "Hubitat Elevation Device Attribute Prometheus Exporter"
homepage = "https://github.com/syepes/hubitat_exporter/"
repository = "https://github.com/syepes/hubitat_exporter/"
readme = "README.md"


[dependencies]
reqwest = { version = "0.11.*", features = [
  "blocking",
  "json",
  "cookies",
  "multipart",
] }
tokio = { version = "1.18.*", features = ["full"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", features = ["raw_value"] }
anyhow = "1.0.*"
tiny_http = "0.11.*"
convert_case = "0.5.*"
openssl = { version = "0.10.*", features = ["vendored"] }
clap = { version = "3.1.*", default-features = false, features = [
  "std",
  "color",
  "cargo",
  "env",
] }
url = "2.*"
log = "0.4.*"
env_logger = "0.9.*"
chrono = "0.4.*"

[dev-dependencies]
clippy = { version = "*" }

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.test]
debug = 0
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
